update alert sent to TheHive
Click to create a alert in TheHive

--- a/config/config_local_dns.yaml
+++ b/config/config_local_dns.yaml
@@ -64,8 +64,12 @@ alias:
 
 notification:
   slack:
-    enable: true
+    enable: false
     webhook: https://hooks.slack.com/services/HelloWorld
+  thehive:
+    enable: true
+    url: http://happyhunting.icu
+    key: helloworld
 
 storage:
   elastic:
